# face_recognition

./: .dockerignore  .gitignore  =0.2.4  API_DOCUMENTATION.md  ATTENDANCE_FIX_INSTRUCTIONS.txt  BUGFIX_REPORT.md  DEPLOYMENT_UPDATE_GUIDE.md  Dockerfile  FIXED_LIVE_RECOGNITION_ATTENDANCE.txt  FRONTEND_REFACTOR.md  Face_Recognition_API.postman_collection.json  Makefile  POSTGRES_MIGRATION.md  PROBLEM_RESOLUTION_REPORT.md  PROJECT_STRUCTURE.md  README.md  README_DOCKER.md  README_old.md  VIDEO_REGISTRATION_FIXES.md  VISUALIZATION_FIX_REPORT.md  camera-test.html  cleanup_project.sh  config.json  debug.html  dev.sh  diagnose_frontend_images.py  diagnose_system.py  docker-compose.yml  final_solution_test.py  final_verification.py  fix_add_faces.py  fix_attendance_cascade.py  index_fixed.html  main.py  main_optimized.py  migrate_add_attendance.py  migrate_add_checkins.py  migrate_add_emp_fields.py  migrate_add_location.py  migrate_add_totalcounts.py  (+21 more)
.github/instructions/: my_instruction.instructions.md
.github/prompts/: extra_prompt.md
.ossutil_checkpoint/: 5268d76d234df6581a9ce5d840772152-26b60cfa584027d2ca5ad3b653412e44.cp
batch_recognition/: README.md  batch_face_recognition.py  requirements.txt
docs/: API_INTERFACE.md  CONFIG_OPTIMIZATION.md  FACE_EMBEDDING_API.md  FONT_MANAGEMENT.md  UNIFIED_MODEL_MANAGEMENT.md
docs/images/: README.md
scripts/: font_manager.py  setup_fonts.sh
src/: __init__.py
src/api/: __init__.py  advanced_fastapi_app.py
src/models/: __init__.py  database.py  database_sqlite_backup.py
src/services/: __init__.py  advanced_face_service.py  thread_safe_face_service.py
src/utils/: __init__.py  config.py  enhanced_visualization.py  font_manager.py  image_utils.py  model_manager.py
web/: debug.html  index.html  index_modular.html  index_working.html  simple_test.html  test.html
web/assets/css/: main.css  main_backup.css  main_optimized.css  modern-styles.css
web/assets/js/: analytics.js  app.js  config.js  enrollment.js  management.js  recognition.js  utils.js
web/assets/js/modules/: enrollment.js  management.js  recognition.js  statistics.js
web/assets/js/services/: event-manager.js  face-recognition-api.js  http-client.js
web/assets/js/utils/: helpers.js  ui-components.js
web/js/: app.js  recognition.js  utils.js
