[project]
name = "face-recognition-system"
version = "1.1.0"
description = "一个完整的人脸识别系统，支持离线入库和在线预测"
authors = [
    {name = "Face Recognition System", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["face-recognition", "computer-vision", "fastapi", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    # 先进人脸识别框架
    "insightface>=0.7.3",
    "deepface>=0.0.93",
    "onnxruntime>=1.17.0",
    # 计算机视觉和ML
    "opencv-python>=4.8.1.78",
    "tensorflow>=2.15.0",
    "numpy>=1.24.3",
    "pillow>=10.0.1",
    "scikit-learn>=1.3.0",
    # 数据处理
    "pandas>=2.1.0",
    "matplotlib>=3.7.0",
    # 数据模型和验证
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.21",
    # 安全和认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 工具
    "tqdm>=4.66.1",
    "click>=8.1.7",
    "tf-keras>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]
analysis = [
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "jupyter>=1.0.0",
    "pandas>=2.1.3",
]

[project.urls]
Homepage = "https://github.com/example/face-recognition-system"
Repository = "https://github.com/example/face-recognition-system.git"
Documentation = "https://github.com/example/face-recognition-system#readme"

[project.scripts]
face-recognition = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
